apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'eclipse'
apply from: 'version.gradle'

sourceSets.main.java.srcDirs = ['src']
sourceSets.main.resources.srcDirs = ['resources']
mainClassName = 'wfDataManager.client.main.WFDataManager'
version = loadVersion().getVersion()

def javaVersion = JavaVersion.VERSION_1_8;
sourceCompatibility = javaVersion;
targetCompatibility = javaVersion; // defaults to sourceCompatibility

// Forces this to be compliant with Java 8 when compiling if compiling using a newer Java version
tasks.withType(JavaCompile) {
    options.release = 8
}

dependencies {
      implementation 'org.xerial:sqlite-jdbc:3.44.1.0'
      implementation 'com.zaxxer:HikariCP:4.0.3'
      implementation project(':WFDataModel')
}
 
configurations {
    runtimeClasspath
}

repositories {
  mavenLocal()
  mavenCentral() // for transitive dependencies
}

jar {
    manifest {
        attributes(
        	'Main-Class': mainClassName,
        	'Class-Path': configurations.runtimeClasspath.files.collect {"$it.name"}.join(' '),
        	'Implementation-Version': version
        )
    }
}

// HOW TO BUILD:
//  - OPEN CMD, CD TO PROJECT FOLDER
//  - RUN 'gradle patchVersionUpdate/minorVersionUpdate/majorVersionUpdate' TO UPDATE DESIGNATED VERSION(S)
//  - RUN 'gradle clean'
//  - RUN 'gradle installDist'
//  - CHECK 'build' FOLDER IN PROJECT FOLDER
//  - ???
//  - PROFIT!